Tela de ativos ok

--- a/frontend/admin/ativos.html
+++ b/frontend/admin/ativos.html
@@ -50,21 +50,21 @@
                 <p>Desativados</p>
             </div>
         </section>
-        <section>
+        <section class="container-fluid">
             <div class="container-fluid d-flex justify-content-evenly dropdowns">
-                <select class="form-select" aria-label="Default select example">
-                    <option selected>Tipo</option>
+                <select id="tipo" class="form-select">
+                    <option value="" selected>Tipo</option>
                     <option value="GATO">Gato</option>
                     <option value="CACHORRO">Cachorro</option>
                 </select>
-                <select class="form-select" aria-label="Default select example">
-                    <option selected>Porte</option>
+                <select id="porte" class="form-select">
+                    <option value="" selected>Porte</option>
                     <option value="P">P</option>
                     <option value="M">M</option>
                     <option value="G">G</option>
                 </select>
-                <select class="form-select" aria-label="Default select example">
-                    <option selected>Raça</option>
+                <select id="raca" class="form-select">
+                    <option value="" selected>Raça</option>
                     <option value="VIRA_LATA">Vira-lata</option>
                     <option value="LABRADOR">Labrador</option>
                     <option value="BULDOGUE_FRANCÊS">Buldogue Francês</option>
@@ -88,73 +88,15 @@
                     <option value="OUTRA">Outra</option>
                 </select>
             </div>
-            <div class="grid">
-                <div class="container-fluid d-flex animal-card">
-                    <div class="d-flex container-foto">
-                        <img class="foto minor-foto"
-                            src="https://img.freepik.com/fotos-premium/ia-generativa-de-cachorro-estilo-pixar-bebe-super-fofo_431161-2025.jpg"
-                            alt="">
-                    </div>
-                    <div class="d-flex flex-column justify-content-center infos">
-                        <div class="d-flex justify-content-center align-items-center">
-                            <h1>Tobi</h1>
-                        </div>
-                        <p>Raça: Vira-lata</p>
-                        <p>Porte: M</p>
-                        <p>Macho</p>
-                    </div>
-                </div>
-                <div class="container-fluid d-flex animal-card">
-                    <div class="d-flex container-foto">
-                        <img class="foto minor-foto"
-                            src="https://img.freepik.com/fotos-premium/ia-generativa-de-cachorro-estilo-pixar-bebe-super-fofo_431161-2025.jpg"
-                            alt="">
-                    </div>
-                    <div class="d-flex flex-column justify-content-center infos">
-                        <div class="d-flex justify-content-center align-items-center">
-                            <h1>Tobi</h1>
-                        </div>
-                        <p>Raça: Vira-lata</p>
-                        <p>Porte: M</p>
-                        <p>Macho</p>
-                    </div>
-                </div>
-                <div class="container-fluid d-flex animal-card">
-                    <div class="d-flex container-foto">
-                        <img class="foto minor-foto"
-                            src="https://img.freepik.com/fotos-premium/ia-generativa-de-cachorro-estilo-pixar-bebe-super-fofo_431161-2025.jpg"
-                            alt="">
-                    </div>
-                    <div class="d-flex flex-column justify-content-center infos">
-                        <div class="d-flex justify-content-center align-items-center">
-                            <h1>Tobi</h1>
-                        </div>
-                        <p>Raça: Vira-lata</p>
-                        <p>Porte: M</p>
-                        <p>Macho</p>
-                    </div>
-                </div>
-                <div class="container-fluid d-flex animal-card">
-                    <div class="d-flex container-foto">
-                        <img class="foto minor-foto"
-                            src="https://img.freepik.com/fotos-premium/ia-generativa-de-cachorro-estilo-pixar-bebe-super-fofo_431161-2025.jpg"
-                            alt="">
-                    </div>
-                    <div class="d-flex flex-column justify-content-center infos">
-                        <div class="d-flex justify-content-center align-items-center">
-                            <h1>Tobi</h1>
-                        </div>
-                        <p>Raça: Vira-lata</p>
-                        <p>Porte: M</p>
-                        <p>Macho</p>
-                    </div>
-                </div>
+            <div id="container-ativos" class="grid">
             </div>
         </section>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script type="module" src="js/admin.js"></script>
+    <script type="module" src="js/ativos.js"></script>
 </body>
 
 </html>
