--- a/frontend/cadastro-anuncio.html
+++ b/frontend/cadastro-anuncio.html
@@ -17,10 +17,12 @@
 <body>
     <header>
         <div class="container-fluid d-flex justify-content-between align-items-center background-color-primary header">
-            <div id="home" class="d-flex align-items-center pointer" title="Home">
-                <i class="fa-solid fa-shield-dog header-icon"></i>
-                <h1>MarPetplace</h1>
-            </div>
+            <a href="/index.html">
+                <div id="home" class="d-flex align-items-center pointer" title="Home">
+                    <i class="fa-solid fa-shield-dog header-icon"></i>
+                    <h1>MarPetplace</h1>
+                </div>
+            </a>
         </div>
     </header>
     <section class="height-main background-color-secondary container-fluid d-flex">
@@ -84,8 +86,7 @@
                     </div>
                     <div class="form-group">
                         <label for="inputContato">Contato</label>
-                        <input required type="tel" placeholder="(99) 99999-9999"
-                            class="form-control" id="inputContato">
+                        <input required type="tel" placeholder="(99) 99999-9999" class="form-control" id="inputContato">
                     </div>
                     <div class="form-group">
                         <label for="selectRaca">Raça</label>
