--- a/frontend/admin/anuncios.html
+++ b/frontend/admin/anuncios.html
@@ -40,7 +40,7 @@
                         src="https://img.freepik.com/fotos-premium/ia-generativa-de-cachorro-estilo-pixar-bebe-super-fofo_431161-2025.jpg"
                         alt="">
                 </div>
-                <div class="d-flex flex-column info-anuncio">
+                <div class="container-fluid d-flex flex-column info-anuncio">
                     <div class="d-flex flex-column justify-content-between info-anuncio-main">
                         <div class="d-flex justify-content-between align-items-center">
                             <p>Raça: Vira-lata</p>
