--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,17 +17,21 @@
 <body>
   <header>
     <div class="container-fluid d-flex justify-content-between align-items-center background-color-primary header">
-      <div id="home" class="d-flex align-items-center pointer" title="Home">
-        <i class="fa-solid fa-shield-dog header-icon"></i>
-        <h1>MarPetplace</h1>
-      </div>
-      <div class="d-flex align-items-center pointer" title="Minha área">
-        <div id="minhaArea" class="d-flex align-items-center">
-          <i class="fa-solid fa-person header-icon"></i>
-          <h1>Minha área</h1>
+      <a href="/index.html">
+        <div id="home" class="d-flex align-items-center pointer" title="Home">
+          <i class="fa-solid fa-shield-dog header-icon"></i>
+          <h1>MarPetplace</h1>
         </div>
-        <i class="fa-solid fa-right-from-bracket header-icon logout" title="Logout"></i>
-      </div>
+      </a>
+      <a href="/cadastro-anuncio.html">
+        <div class="d-flex align-items-center pointer" title="Minha área">
+          <div id="minhaArea" class="d-flex align-items-center">
+            <i class="fa-solid fa-person header-icon"></i>
+            <h1>Minha área</h1>
+          </div>
+          <i class="fa-solid fa-right-from-bracket header-icon logout" title="Logout"></i>
+        </div>
+      </a>
     </div>
   </header>
   <section class="height-main background-color-secondary">
@@ -35,19 +39,19 @@
       <h1 class="looking-for-home">Estou procurando um lar</h1>
     </div>
     <div class="container-fluid d-flex justify-content-evenly dropdowns">
-      <select class="form-select" aria-label="Default select example">
-        <option selected>Tipo</option>
+      <select id="tipo" class="form-select" aria-label="Default select example">
+        <option value="" selected>Tipo</option>
         <option value="GATO">Gato</option>
         <option value="CACHORRO">Cachorro</option>
       </select>
-      <select class="form-select" aria-label="Default select example">
-        <option selected>Porte</option>
+      <select id="porte" class="form-select" aria-label="Default select example">
+        <option value="" selected>Porte</option>
         <option value="P">P</option>
         <option value="M">M</option>
         <option value="G">G</option>
       </select>
-      <select class="form-select" aria-label="Default select example">
-        <option selected>Raça</option>
+      <select id="raca" class="form-select" aria-label="Default select example">
+        <option value="" selected>Raça</option>
         <option value="VIRA_LATA">Vira-lata</option>
         <option value="LABRADOR">Labrador</option>
         <option value="BULDOGUE_FRANCÊS">Buldogue Francês</option>
@@ -71,77 +75,14 @@
         <option value="OUTRA">Outra</option>
       </select>
     </div>
-    <div class="grid">
-      <div class="container-fluid d-flex animal-card">
-        <div class="d-flex container-foto">
-          <img class="foto"
-            src="https://img.freepik.com/fotos-premium/ia-generativa-de-cachorro-estilo-pixar-bebe-super-fofo_431161-2025.jpg"
-            alt="">
-        </div>
-        <div class="d-flex flex-column justify-content-center infos">
-          <div class="d-flex justify-content-center align-items-center">
-            <h1>Tobi</h1>
-          </div>
-          <p>Raça: Vira-lata</p>
-          <p>Porte: M</p>
-          <p>Macho</p>
-        </div>
-        <i class="fa-solid fa-circle-exclamation danger"></i>
-      </div>
-      <div class="container-fluid d-flex animal-card">
-        <div class="d-flex container-foto">
-          <img class="foto"
-            src="https://img.freepik.com/fotos-premium/ia-generativa-de-cachorro-estilo-pixar-bebe-super-fofo_431161-2025.jpg"
-            alt="">
-        </div>
-        <div class="d-flex flex-column justify-content-center infos">
-          <div class="d-flex justify-content-center align-items-center">
-            <h1>Tobi</h1>
-          </div>
-          <p>Raça: Vira-lata</p>
-          <p>Porte: M</p>
-          <p>Macho</p>
-        </div>
-        <i class="fa-solid fa-circle-exclamation danger"></i>
-      </div>
-      <div class="container-fluid d-flex animal-card">
-        <div class="d-flex container-foto">
-          <img class="foto"
-            src="https://img.freepik.com/fotos-premium/ia-generativa-de-cachorro-estilo-pixar-bebe-super-fofo_431161-2025.jpg"
-            alt="">
-        </div>
-        <div class="d-flex flex-column justify-content-center infos">
-          <div class="d-flex justify-content-center align-items-center">
-            <h1>Tobi</h1>
-          </div>
-          <p>Raça: Vira-lata</p>
-          <p>Porte: M</p>
-          <p>Macho</p>
-        </div>
-        <i class="fa-solid fa-circle-exclamation danger"></i>
-      </div>
-      <div class="container-fluid d-flex animal-card">
-        <div class="d-flex container-foto">
-          <img class="foto"
-            src="https://img.freepik.com/fotos-premium/ia-generativa-de-cachorro-estilo-pixar-bebe-super-fofo_431161-2025.jpg"
-            alt="">
-        </div>
-        <div class="d-flex flex-column justify-content-center infos">
-          <div class="d-flex justify-content-center align-items-center">
-            <h1>Tobi</h1>
-          </div>
-          <p>Raça: Vira-lata</p>
-          <p>Porte: M</p>
-          <p>Macho</p>
-        </div>
-        <i class="fa-solid fa-circle-exclamation danger"></i>
-      </div>
+    <div id="container-ativos" class="grid">
+      
     </div>
   </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-  <script src="js/user.js"></script>
+  <script type="module" src="js/index.js"></script>
 </body>
 
 </html>
