Create denuncia and recursos OK

--- a/frontend/admin/recursos.html
+++ b/frontend/admin/recursos.html
@@ -60,44 +60,15 @@
                 </div>
             </a>
         </section>
-        <section>
+        <section class="container-fluid">
             <div class="grid-recurso">
-                <div class="card-recurso container-fluid d-flex flex-column">
-                    <i title="Acessar anúncio" class="fa-solid fa-arrow-up-right-from-square"></i>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In euismod leo sit amet magna mattis
-                        tempus. Ut finibus volutpat est et efficitur. Nunc turpis mi, sagittis eu risus nec, dapibus
-                        pulvinar est.</p>
-                    <div class="btn-group-recurso container-fluid d-flex justify-content-evenly">
-                        <button type="button" class="btn-desativar">Recusar</button>
-                        <button type="button" class="btn btn-primary btn-reativar">Aceitar</button>
-                    </div>
-                </div>
-                <div class="card-recurso container-fluid d-flex flex-column">
-                    <i title="Acessar anúncio" class="fa-solid fa-arrow-up-right-from-square"></i>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In euismod leo sit amet magna mattis
-                        tempus. Ut finibus volutpat est et efficitur. Nunc turpis mi, sagittis eu risus nec, dapibus
-                        pulvinar est.</p>
-                    <div class="btn-group-recurso container-fluid d-flex justify-content-evenly">
-                        <button type="button" class="btn-desativar">Recusar</button>
-                        <button type="button" class="btn btn-primary btn-reativar">Aceitar</button>
-                    </div>
-                </div>
-                <div class="card-recurso container-fluid d-flex flex-column">
-                    <i title="Acessar anúncio" class="fa-solid fa-arrow-up-right-from-square"></i>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In euismod leo sit amet magna mattis
-                        tempus. Ut finibus volutpat est et efficitur. Nunc turpis mi, sagittis eu risus nec, dapibus
-                        pulvinar est.</p>
-                    <div class="btn-group-recurso container-fluid d-flex justify-content-evenly">
-                        <button type="button" class="btn-desativar">Recusar</button>
-                        <button type="button" class="btn btn-primary btn-reativar">Aceitar</button>
-                    </div>
-                </div>
             </div>
         </section>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script type="module" src="js/recursos.js"></script>
 </body>
 
 </html>
