--- a/frontend/index.html
+++ b/frontend/index.html
@@ -76,13 +76,32 @@
       </select>
     </div>
     <div id="container-ativos" class="grid">
-      
+
+    </div>
+    <div class="modal fade" id="denunciaModal" tabindex="-1" aria-labelledby="denunciaModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="denunciaModalLabel">Denúncia</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <label for="inputMotivo">Motivo</label>
+            <textarea required class="form-control" id="inputMotivo" rows="3"></textarea>
+          </div>
+          <div class="modal-footer">
+            <button id="btnClose" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+            <button id="btnSave" type="button" class="btn btn-primary">Salvar</button>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
   <script type="module" src="js/index.js"></script>
+  <script type="module" src="js/Jwt.js"></script>
 </body>
 
 </html>
